src/root.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .icon-selected {
        @apply border-2 border-red-600 rounded-sm opacity-100
    }

    .btn {
        text-transform: none;
    }

    .icon-rainbow {
        @apply opacity-100;
        border: 3px solid transparent;
        background: linear-gradient(to bottom right, red, yellow, lime, aqua, blue, magenta, red) border-box;
    }

    .icon-super-rainbow {
        @apply opacity-100;
        border: 3px solid transparent;
        background: linear-gradient(to bottom right, #dd6f56, #f06a73, #cf4ab5, #9662d1, #53b9e1, #5bfed3, #c2f9a8, #f7f56e, #f6c40b, #dd6f56, #dd6f56, #f06a73, #cf4ab5, #9662d1, #53b9e1, #5bfed3, #c2f9a8, #f7f56e, #f6c40b, #dd6f56, #dd6f56, #f06a73, #cf4ab5, #9662d1, #53b9e1, #5bfed3, #c2f9a8, #f7f56e, #f6c40b, #dd6f56, #dd6f56, #f06a73, #cf4ab5, #9662d1, #53b9e1, #5bfed3, #c2f9a8, #f7f56e, #f6c40b, #dd6f56, #dd6f56, #f06a73, #cf4ab5, #9662d1, #53b9e1, #5bfed3, #c2f9a8, #f7f56e, #f6c40b, #dd6f56) border-box;
        box-shadow: 2px 2px 5px 2px #FF8080, -3px 2px 5px 2px #FFE488, -3px -2px 5px 2px #8CFF85, 3px -2px 5px 2px #80C7FF, 3px 2px 5px 2px #E488FF, -3px 2px 5px 2px #FF616B, -3px -2px 10px 2px #8E5CFF, 2px 2px 5px 2px rgba(0, 0, 0, 0);
    }

    .icon-removed {
        display: none;
    }

}

